Changes for 1.7.4

 - [ZBX-137] added patch for Oracle (Alexei)
 - [ZBX-1372] applied patches for localization (Aly)
 - [ZBX-1378] allowed using months in age view (Aly)
 - [ZBX-1301] fixed discovery hosts view in dashboard (Aly)
 - [ZBX-1370] fixes in items copy (Aly)
 - [ZBX-1398] fixed advanced icons selection (Aly)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [ZBX-1380] improved performance viewing inventory host (vedmak)
 - [ZBX-1334] improved performance of template edit form (vedmak)
 - [DEV-438] added support of suffixes (K,M,G) in configuration parameters (Sasha)
 - [DEV-369] item check "log.regexp" was renamed to "logrt" to specify "log rotation" (Dmitry)
 - [DEV-339] added more internal checks zabbix[wcache,*] and abbix[rcache,*] (Sasha)
 - [ZBX-1209] fixed new node not shown in the list after adding (Vedmak)
 - [ZBX-1221] fixed node adding mechanizm (Vedmak)
 - [ZBX-1400] changed none working time highlight color for default graph themes (Aly)
 - [ZBX-1404] fixed undefined variable in screens (Aly)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [DEV-411] added configuration parameters for dbcache module (Sasha)
 - [ZBX-1090] fixes for returned values from API calls (Aly)
 - [ZBX-1356] fixed undefined errors on user group deletion (Aly)
 - [ZBX-1403] fixed discovery widget to show only discovery from selected node (Aly)
 - [ZBX-1397] make 'History' string in page header translatable, thanks to Alexey Pustovalov (Richlv)
 - [ZBX-1381] performance improvements for maps view (Aly)
 - [ZBX-1325] fixed error when add host or hostgroup with postgre (Vedmak)
 - [DEV-137] removed "IF NOT EXISTS" clauses from Sqlite DB schema (Alexei)
 - [ZBX-1395] fixed map elements highlighting option (Aly)
 - [ZBX-1396] fixes in map element selection (Aly)
 - [ZBX-1394] fixed compilation of checks_db.c with enabled iODBC (Sasha)
 - [DEV-137] minor fix for PostgreSQL patch (Alexei)

Changes for 1.7.3
